[tool.poetry]
name = "dd-replication"
version = "0.1.0"
description = ""
authors = ["Misha Wagner <misha@conjecture.dev>"]
readme = "README.md"
packages = [{include = "dd_replication"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.1"
seaborn = "^0.13.0"
wandb = "^0.16.0"
jaxtyping = "^0.2.23"
tqdm = "^4.66.1"
fire = "^0.5.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
ipywidgets = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
